<resources>
    <string name="app_name">starcompStoreRepair</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_repair">Repair</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_register">Register</string>
    <string name="menu_kategori">Kategori</string>
    <string name="menu_belanja">Belanja</string>


    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profil</string>
    <string name="title_repair">Repair</string>


    <string name="home_second">Home Second</string>
</resources>
